@@ -6,7 +6,6 @@ apply from: project(":").file('gradle/java.gradle')
 
 dependencies {
     implementation project(':common:rest-java-model')
-    implementation group: 'io.swagger.core.v3', name: 'swagger-annotations'
     implementation group: 'ai.h2o', name: 'mojo2-runtime-api'
     implementation group: 'ai.h2o', name: 'mojo2-runtime-impl'
     implementation group: 'com.google.guava', name: 'guava'
@@ -28,13 +27,14 @@ dependencies {
     testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: jupiterPioneerVersion
 }
 
-bootJar {
-    enabled=false
-}
-
 test {
     useJUnitPlatform()
+}
 
-    jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
-    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
 }
