@@ -32,9 +32,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
-
-    jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
-    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
 }
 
 bootRun {
